tests/error/type_match/base_case_pointer_const_propagation1.bz
// error: unable to match value of type 'mut *i32' to '*mut i32'
// note: mismatched mutability of types 'i32' and 'mut i32'
function test()
{
	mut i = 0;
	mut cpi: *i32 = &i;
	let _: *mut i32 = cpi;
}
